<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <ImageView
        android:layout_width="120dp"
        android:layout_height="110dp"
        android:id="@+id/weather_image"
        android:src="@mipmap/ic_launcher_round"
        android:transitionName="@string/image_transition"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="90dp"
        />

    <TextView
        android:id="@+id/city_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textStyle="bold"
        android:text="Almaty"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@id/weather_image"
        app:layout_constraintTop_toTopOf="@id/weather_image" />

    <TextView
        android:id="@+id/temperature_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10"
        android:textStyle="bold"
        android:textSize="80sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weather_image" />

    <TextView
        android:id="@+id/feel_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:text="@string/feels_like"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temperature_value" />

    <TextView
        android:id="@+id/feel_like_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="10"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@id/feel_like"
        app:layout_constraintTop_toTopOf="@id/feel_like" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="65dp"
        android:text="@string/time"
        app:layout_constraintStart_toStartOf="@id/weather_image"
        app:layout_constraintTop_toBottomOf="@+id/feel_like" />

    <TextView
        android:id="@+id/time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginStart="50dp"
        app:layout_constraintStart_toEndOf="@id/time"
        app:layout_constraintTop_toTopOf="@id/time" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="@id/time"
        app:layout_constraintTop_toBottomOf="@+id/time" />

    <TextView
        android:id="@+id/description_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginStart="50dp"
        app:layout_constraintStart_toEndOf="@id/description"
        app:layout_constraintTop_toTopOf="@id/description" />


</androidx.constraintlayout.widget.ConstraintLayout>